--- a/haskell/Makefile
+++ b/haskell/Makefile
@@ -1,15 +1,15 @@
-SHELL=/usr/local/bin/bash
+SHELL=/usr/bin/env bash
 map=$(foreach value,$(2),$(call $(1),$(value)))
 get_source_in_directory=$(wildcard $(value)/*.hs)
 
 DIRS=.
 SRC=$(call map,get_source_in_directory,$(DIRS))
+OBJ=$(SRC:.hs=.o)
 
 COMPILER=ghc
 EXEC=runhaskell
 BIN=script
 TESTSCRIPT=script.hs
-OBJ=$(SRC:.hs=.o)
 
 default: help
 
@@ -32,6 +32,11 @@ test: run
 
 # unwatch: ## Clear watch
 # 	watchman watch-del .
+#
+debug: ## Print variables
+	@echo SHELL=$(SHELL)
+	@echo SRC=$(SRC)
+	@echo OBJ=$(OBJ)
 
 clean: ## Clean
 	rm -f $(BIN) $(OBJ) 
@@ -39,4 +44,4 @@ clean: ## Clean
 help: ## Display this help
 	@grep -E '^[0-9a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
-.PHONY: run clean watch unwatch compile help
+.PHONY: debug run clean watch unwatch compile help
