--- a/TypeScript/package.json
+++ b/TypeScript/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.11.6",
-    "lodash": "^4.17.21",
     "jsModuleWithoutTypes": "file://./jsModuleWithoutTypes",
-    "jsModuleWithTypes": "file://./jsModuleWithTypes"
+    "jsModuleWithTypes": "file://./jsModuleWithTypes",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "typescript": "^4.4.4",
-    "typescript-language-server": "^0.6.4"
+    "typescript": "^4.8.4",
+    "typescript-language-server": "^2.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
