--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,20 @@ jobs:
         working-directory: ${{ github.workspace }}/TypeScript/
         run: make run
 
+      - name: Cleanup
+        working-directory: ${{ github.workspace }}/TypeScript/
+        run: make clean
+
   c:
     runs-on: ubuntu-latest
     steps:
       - run: set
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Compile
+        working-directory: ${{ github.workspace }}/c/
+        run: make debug && make compile && make hacking_book_compile
 
       - name: Run hello
         working-directory: ${{ github.workspace }}/c/
@@ -42,6 +50,10 @@ jobs:
       - name: Run test
         working-directory: ${{ github.workspace }}/c/
         run: make run
+
+      - name: Cleanup
+        working-directory: ${{ github.workspace }}/c/
+        run: make clean
 
   # Uses gh-actions-lua: https://github.com/leafo/gh-actions-lua
   lua:
@@ -85,3 +97,7 @@ jobs:
       - name: Run test
         working-directory: ${{ github.workspace }}/haskell/
         run: make run
+
+      - name: Cleanup
+        working-directory: ${{ github.workspace }}/haskell/
+        run: make clean
