--- a/haskell/stack.yaml
+++ b/haskell/stack.yaml
@@ -9,8 +9,9 @@
 # to be used for project dependencies. For example:
 #
 # resolver: lts-3.5
-# resolver: nightly-2015-09-21
-resolver: ghc-9.2.4
+resolver: nightly-2022-11-05
+# resolver: ghc-9.2.4
+compiler: ghc-9.2.4
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
 # a snapshot provided as a file might change, whereas a url resource does not.
@@ -40,9 +41,9 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-extra-deps: 
-- random-1.2.1.1
-- splitmix-0.1.0.4
+extra-deps: []
+# - random-1.2.1.1
+# - splitmix-0.1.0.4
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
