haskell: HID Chapter2 tests

--- a/haskell/Makefile
+++ b/haskell/Makefile
@@ -7,8 +7,10 @@ EXEC=runhaskell
 MAINSRC=script.hs
 SRC=$(call map,get_source_in_directory,./lib) $(MAINSRC)
 OBJ=$(SRC:.hs=.o)
+
 COMPONENTMAIN=playground:exe:main
 HIDMAIN=playground:exe:hid
+HIDTEST=playground:test:hid-test
 BIN=main
 
 HELLOSRC=hellomain.hs
@@ -43,9 +45,19 @@ run-profile:
 
 runAll: ## Run all tests
 	yes | make run
+	make run-hid
 
 run-hid: ## Haskell in depth
-	stack exec -- hid
+	@echo "Chapter 1"
+	@echo 1 | stack exec -- hid ./haskellInDepth/data/hamlet.txt 20
+	@echo 1 | stack exec -- hid ./haskellInDepth/data/forsyte.txt 20
+
+	@echo "Chapter 2"
+	@echo 2 | stack exec -- hid -r ./haskellInDepth/data/rotations1.txt North
+	@echo 2 | stack exec -- hid -o ./haskellInDepth/data/directions1.txt 
+
+	@echo "Tests"
+	@stack test -- $(HIDTEST)
 
 watch: ## Watch for changes
 	watchman watch .
