--- a/haskell/hie.yaml
+++ b/haskell/hie.yaml
@@ -6,5 +6,7 @@ cradle:
       component: "playground:exe:main"
     - path: "./haskellInDepth"
       component: "playground:exe:hid"
+    - path: "./haskellInDepth/test"
+      component: "playground:test:hid-test"
     - path: "./realWorldHaskell"
       component: "playground:exe:rwh"
