--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -26,7 +26,7 @@ dependencies:
 - ghc-prim
 - ghc-bignum
 - text
-# - fmt
+- fmt
 
 ghc-options:
 - -Wall
@@ -50,7 +50,6 @@ language: GHC2021
 library:
   source-dirs: ./lib
   dependencies:
-  - fmt
   - random
 
 executables:
@@ -81,7 +80,6 @@ executables:
     - Chapter2
     - Radar
     dependencies: 
-    - fmt
     - bytestring
 
   rwh:
@@ -92,6 +90,16 @@ executables:
       - Temp
     dependencies:
     - playground
+
+internal-libraries:
+  hid-lib:
+    source-dirs: ./haskellInDepth
+    exposed-modules:
+      - Utils
+      - Chapter1
+      - Chapter2
+      - Radar
+    dependencies: []
 
 tests:
   maintest:
@@ -104,3 +112,11 @@ tests:
     # - -fprof-auto
     dependencies:
     - playground
+
+  hid-test:
+    main:               main.hs
+    source-dirs:      ./haskellInDepth/test
+    dependencies: 
+    - random
+    - hid-lib
+
