--- a/haskell/haskellInDepth/package.yaml
+++ b/haskell/haskellInDepth/package.yaml
@@ -77,6 +77,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - vector
     - bytestring >=0.10 && <0.12
     - blaze-html >=0.9 && <0.10
     - optparse-applicative >=0.14 && <0.17
